<resources>
    <string name="app_name">LoveCalculator</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="calculate">Calculate</string>
    <string name="your_score">Your Score</string>
    <string name="result">result</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="get_started">get started</string>
    <string name="history">History</string>
</resources>