<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:orientation="vertical"
    android:padding="18dp">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/couple"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_calculator"
        android:textSize="40sp"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/pink"

        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/first_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/second_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_name"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/calculate"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/pink"
        android:textAllCaps="false"
        android:textStyle="italic"
        />

</LinearLayout>