<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AnswerFragment"
    android:orientation="vertical"
    android:padding="18dp"
    android:gravity="center_horizontal">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:id="@+id/f_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/heart"
        android:layout_marginTop="10dp"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:src="@drawable/heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_name"
        />

    <TextView
        android:id="@+id/s_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heart"
        />

    <TextView
        android:id="@+id/score"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textSize="30sp"
        android:textColor="@color/pink"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_name"
        />

    <ImageView
        android:id="@+id/ans"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/ans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="150dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@id/ans"
        app:layout_constraintBottom_toBottomOf="@id/ans"
        app:layout_constraintStart_toStartOf="@+id/ans"
        app:layout_constraintEnd_toEndOf="@id/ans"
        android:layout_marginTop="-20dp"
        />

    <Button
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintStart_toStartOf="@+id/ans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ans"
        android:id="@+id/btn_history"
        android:layout_width="250dp"
        android:layout_height="64dp"
        android:text="@string/history"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:backgroundTint="@color/pink"
        android:textAllCaps="false"
        android:textStyle="italic"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
